k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alone-in-a-room-deployment
  labels:
    app: alone-in-a-room
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alone-in-a-room
      type: backend
  template:
    metadata:
      name: alone-in-a-room-pod
      labels:
        app: alone-in-a-room
        type: backend
    spec:
      containers:
      - name: web
        image: registry.gitlab.com/serneum/jekyll-test:latest
        imagePullPolicy: Always
        command: ['jekyll', 'serve', '--watch', '--force_polling', '--verbose', '--host', '0.0.0.0']
        ports:
        - containerPort: 4000
      imagePullSecrets:
      - name: regcred
