k8s/blog-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jekyll-service
spec:
  type: NodePort
  selector:
    app: alone-in-a-room
    type: backend
  ports:
  - port: 9099
    targetPort: 4000
